# libsxc

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  sxc_point.c  sxc_point.h  sxc_string.c  sxc_string.h  sxc_term_color.h  sxc_utils.c  sxc_utils.h  sxc_vector.h  sxc_vector_types.h
test/: CMakeLists.txt  tests_charcount.c  tests_charmap.c  tests_point_cmp.c  tests_string_getline.c  tests_string_init.c  tests_string_push.c  tests_term_color.c  tests_vector_binary_search.c  tests_vector_copy.c  tests_vector_emplace.c  tests_vector_find.c  tests_vector_foreach.c  tests_vector_init.c  tests_vector_pop.c  tests_vector_push.c  tests_vector_push_types.c  tests_vector_sort.c  tests_vector_types.c  tests_vector_xfer.c
tools/: naming01.sed
